# Proced_mem_bench

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-baselines.txt  requirements.txt  setup.py
docs/: API_REFERENCE.md  TROUBLESHOOTING.md
examples/: compare_with_baseline.py  custom_retrieval_minimal.py  quickstart.py
procedural_memory_benchmark/: __init__.py
procedural_memory_benchmark/agentinstruct/: __init__.py  corpus_loader.py  database.py  database_actions_only.py  embedder.py
procedural_memory_benchmark/benchmark/: __init__.py  benchmark_runner.py  complexity_analyzer.py  metrics_calculator.py  query_bank.py  report_generator.py  retrieval_interface.py
procedural_memory_benchmark/benchmark/data/: query_bank.json
procedural_memory_benchmark/data/corpus/: agentinstruct_trajectories.json
procedural_memory_benchmark/llm/: __init__.py  llm_reasoner.py
procedural_memory_benchmark/utils/: __init__.py  paths.py
tests/: __init__.py  validate_retrieval.py
